Fix huge leak warren introduced last night.  Changing the hash keys to have owning pointers caused circular ownership.  r=waterson  b=48373 (nsbeta3+)